# rust-crypto

./: Cargo.toml  build.rs
src/: aes.rs  aes_gcm.rs  aesni.rs  aessafe.rs  bcrypt.rs  bcrypt_pbkdf.rs  blake2b.rs  blake2s.rs  blockmodes.rs  blowfish.rs  buffer.rs  chacha20.rs  chacha20poly1305.rs  cryptoutil.rs  curve25519.rs  digest.rs  ed25519.rs  fortuna.rs  ghash.rs  hc128.rs  hkdf.rs  hmac.rs  lib.rs  mac.rs  md5.rs  pbkdf2.rs  poly1305.rs  rc4.rs  ripemd160.rs  salsa20.rs  scrypt.rs  sha1.rs  sha2.rs  sha3.rs  simd.rs  sosemanuk.rs  step_by.rs  symmetriccipher.rs  util.rs  whirlpool.rs
