[package]
name = "rust-crypto"
version = "0.2.36"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/DaGenix/rust-crypto/"
repository = "https://github.com/DaGenix/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
readme = "README.md"
build = "build.rs"

[lib]
name = "crypto"

[features]
default = ["std"]
with-bench = []
std = [
    "hex/std",
    "serde/std",
    "base64/std",
    "libc/std",
    "sr-std/std"
]

[build-dependencies]
cc = "^1.0"

[dependencies]
libc = { version = "^0.2", default-features = false }
#time = "^0.1"
# rand = { version = "^0.6", default-features = false, optional = true } 
serde = { version = "^1.0", default-features = false }
hex = { version = "^0.4", default-features = false }
base64 = { version = "^0.11", default-features = false }
sr-std = { package = "sp-std", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

